<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="#d9d9d9" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/mobile"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="12dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/mobile"
                android:inputType="number"
                android:textColor="#3f4447" />

            <Button
                android:id="@+id/call"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="12dp"
                android:background="@drawable/common_btn_bg_selector_yellow"
                android:text="@string/call"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="#d9d9d9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/content"
            android:minLines="3"
            android:textColor="#3f4447" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="#d9d9d9" />

        <Button
            android:id="@+id/send"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/common_btn_bg_selector_yellow"
            android:text="@string/sendMsg"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="#d9d9d9" />

    <EditText
        android:id="@+id/et_toMobile"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:hint="@string/toMobile"
        android:inputType="number"
        android:textColor="#3f4447" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="#d9d9d9" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg_selector_yellow"
            android:text="@string/registr"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/unregister"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg_selector_white"
            android:text="@string/unRegistr"
            android:textColor="#3f4447" />
    </LinearLayout>
</LinearLayout>
