<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widthPixels"
            android:textColor="@color/text_default_color"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_widthPixels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="111"
            android:textColor="@color/text_default_color"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heightPixels"
            android:textColor="@color/text_default_color"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_heightPixels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="111"
            android:textColor="@color/text_default_color"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/density"
            android:textColor="@color/text_default_color"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_density"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="111"
            android:textColor="@color/text_default_color"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/densityDpi"
            android:textColor="@color/text_default_color"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_densityDpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="111"
            android:textColor="@color/text_default_color"
            android:textSize="10sp" />
    </LinearLayout>


</LinearLayout>
