<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_main_bgColor"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        layout="@layout/common_header" />

    <FrameLayout
        android:id="@+id/rl_advertisement"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >

        <com.peter.common.view.AutoScrollViewPager
            android:id="@+id/vp_advertisement"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/home_banner_pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="3dip"
            android:orientation="horizontal" >
        </LinearLayout>

        <SurfaceView
            android:id="@+id/sv_advertisement"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/rl_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin10"
        android:layout_weight="7"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/rl_fun"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_anquan"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@mipmap/anquan" />

            <ImageView
                android:id="@+id/iv_xunsu"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_weight="1"
                android:background="@mipmap/xunsu" />

            <ImageView
                android:id="@+id/iv_bianjie"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_weight="1"
                android:background="@mipmap/bianjie" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_announcement"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin10"
            android:layout_weight="1"
            android:background="@color/home_announcement_bgColor"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding10"
            android:text="@string/home_announcement"
            android:textColor="@color/home_announcement_txtColor"
            android:textSize="@dimen/announcement_text_size" />

        <ImageView
            android:id="@+id/jlb"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin10"
            android:layout_weight="5"
            android:background="@mipmap/jlb" />
    </LinearLayout>

    <View
        android:id="@+id/v1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height2"
        android:background="@color/home_line_bgColor" />

    <RadioGroup
        android:id="@+id/rg_nav"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin5"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_pickup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawablePadding="@dimen/padding5"
            android:drawableTop="@drawable/selector_ic_pickup"
            android:gravity="center"
            android:text="@string/home_menu_txt_pickup"
            android:textColor="@color/home_menu_txt_color"
            android:textSize="@dimen/home_menu_text_size" />

        <RadioButton
            android:id="@+id/rb_delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawablePadding="@dimen/padding5"
            android:drawableTop="@drawable/selector_ic_delivery"
            android:gravity="center"
            android:text="@string/home_menu_txt_delivery"
            android:textColor="@color/home_menu_txt_color"
            android:textSize="@dimen/home_menu_text_size" />

        <RadioButton
            android:id="@+id/rb_deposit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawablePadding="@dimen/padding5"
            android:drawableTop="@drawable/selector_ic_deposit"
            android:gravity="center"
            android:text="@string/home_menu_txt_deposit"
            android:textColor="@color/home_menu_txt_color"
            android:textSize="@dimen/home_menu_text_size" />

        <RadioButton
            android:id="@+id/rb_recharge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawablePadding="@dimen/padding5"
            android:drawableTop="@drawable/selector_ic_recharge"
            android:gravity="center"
            android:text="@string/home_menu_txt_recharge"
            android:textColor="@color/home_menu_txt_color"
            android:textSize="@dimen/home_menu_text_size" />

        <RadioButton
            android:id="@+id/rb_inquiry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawablePadding="@dimen/padding5"
            android:drawableTop="@drawable/selector_ic_inquiry"
            android:gravity="center"
            android:text="@string/home_menu_txt_inquiry"
            android:textColor="@color/home_menu_txt_color"
            android:textSize="@dimen/home_menu_text_size" />

        <RadioButton
            android:id="@+id/rb_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:drawablePadding="@dimen/padding5"
            android:drawableTop="@drawable/selector_ic_help"
            android:gravity="center"
            android:text="@string/home_menu_txt_help"
            android:textColor="@color/home_menu_txt_color"
            android:textSize="@dimen/home_menu_text_size" />
    </RadioGroup>

</LinearLayout>