<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_main_bgColor"
    android:orientation="vertical">

    <include
        layout="@layout/common_header"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3" />

    <include
        layout="@layout/common_middle"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5" />

    <LinearLayout
        android:id="@+id/rl_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:background="@color/pickup_content_bgColor"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/lv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_imputPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pickup_hint"
                    android:textColor="@color/pickup_hint_txtColor"
                    android:textSize="@dimen/pickup_text_size" />

                <RelativeLayout
                    android:id="@+id/rl_goHome"
                    style="@style/rl_goHome"
                    android:layout_marginLeft="@dimen/margin60"
                    android:layout_weight="1"
                    android:background="@mipmap/go_home"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_goHome"
                        style="@style/iv_goHomeImg"
                        android:layout_centerVertical="true"
                        android:background="@mipmap/home2" />

                    <TextView
                        android:id="@+id/tv_goHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin3"
                        android:layout_toRightOf="@id/iv_goHome"
                        android:text="@string/go_home"
                        android:textColor="@color/white"
                        android:textSize="@dimen/go_home_text_size" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pwd"
                android:layout_width="0dp"
                android:layout_height="@dimen/pickup_et_pwd_height"
                android:layout_alignLeft="@id/lv_pwd"
                android:layout_alignRight="@id/lv_pwd"
                android:layout_below="@id/lv_pwd"
                android:layout_marginTop="@dimen/margin14"
                android:background="@mipmap/pickup_bg">

                <EditText
                    android:id="@+id/et_pwd1"
                    style="@style/et_pickupNum"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/et_pwd2"
                    style="@style/et_pickupNum"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/et_pwd3"
                    style="@style/et_pickupNum"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/et_pwd4"
                    style="@style/et_pickupNum"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/et_pwd5"
                    style="@style/et_pickupNum"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/et_pwd6"
                    style="@style/et_pickupNum"
                    android:layout_weight="1" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btn_num1"
                style="@style/btn_pickupNum"
                android:background="@drawable/selector_pickup_btn"
                android:text="1"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num2"
                style="@style/btn_pickupNum"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_toRightOf="@id/btn_num1"
                android:background="@drawable/selector_pickup_btn"
                android:text="2"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num3"
                style="@style/btn_pickupNum"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_toRightOf="@id/btn_num2"
                android:background="@drawable/selector_pickup_btn"
                android:text="3"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num4"
                style="@style/btn_pickupNum"
                android:layout_below="@id/btn_num1"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/selector_pickup_btn"
                android:text="4"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num5"
                style="@style/btn_pickupNum"
                android:layout_alignBaseline="@id/btn_num4"
                android:layout_alignBottom="@id/btn_num4"
                android:layout_alignLeft="@id/btn_num2"
                android:background="@drawable/selector_pickup_btn"
                android:text="5"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num6"
                style="@style/btn_pickupNum"
                android:layout_alignBaseline="@id/btn_num5"
                android:layout_alignBottom="@id/btn_num5"
                android:layout_alignLeft="@id/btn_num3"
                android:background="@drawable/selector_pickup_btn"
                android:text="6"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num7"
                style="@style/btn_pickupNum"
                android:layout_below="@id/btn_num4"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/selector_pickup_btn"
                android:text="7"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num8"
                style="@style/btn_pickupNum"
                android:layout_alignBaseline="@id/btn_num7"
                android:layout_alignBottom="@id/btn_num7"
                android:layout_alignLeft="@id/btn_num5"
                android:background="@drawable/selector_pickup_btn"
                android:text="8"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num9"
                style="@style/btn_pickupNum"
                android:layout_alignBaseline="@id/btn_num8"
                android:layout_alignBottom="@id/btn_num8"
                android:layout_alignLeft="@id/btn_num6"
                android:background="@drawable/selector_pickup_btn"
                android:text="9"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_num0"
                style="@style/btn_pickupNum"
                android:layout_below="@id/btn_num7"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/selector_pickup_btn"
                android:text="0"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />

            <Button
                android:id="@+id/btn_backspace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignBottom="@id/btn_num0"
                android:layout_alignLeft="@id/btn_num8"
                android:layout_alignRight="@+id/btn_num9"
                android:layout_alignTop="@+id/btn_num0"
                android:background="@drawable/selector_pickup_btn"
                android:text="@string/delete"
                android:textColor="@color/pickup_btn_num_txtColor"
                android:textSize="@dimen/pickup_btn_text_size" />
        </RelativeLayout>
    </LinearLayout>

    <include
        layout="@layout/common_bottom"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>